--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
+
+/* :root {
+  --primary-color: #9255FD;
+} */
+
 body {
   margin: 0;
   box-sizing: border-box;
